feat: Set uuids on GenericBackend

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   minio: ^3.5.0
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.2.2
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
